Fixed some layout issues.

--- a/assets/scss/layout/_coming-soon-page.scss
+++ b/assets/scss/layout/_coming-soon-page.scss
@@ -15,7 +15,7 @@
 .coming-soon-content-layout {
   gap: 3rem;
   width: 85%;
-  margin: 4rem 0 8rem 0;
+  margin: 4rem 0;
   text-align: center;
 
   @include a.breakpoint(medium) {
